Fix KYC modal scroll and responsive content visibility match ui color and pagination postion change

--- a/src/app/admin/pages/business-categories/business-categories.scss
+++ b/src/app/admin/pages/business-categories/business-categories.scss
@@ -51,7 +51,7 @@
   height: 52px;
   padding: 0 24px;
   border-radius: 16px;
-  background: linear-gradient(135deg, #6d00ff, #c700ff);
+  background: linear-gradient(135deg, #901299, #c700ff);
   color: #ffffff;
   font-size: 14px;
   font-weight: 700;
@@ -179,7 +179,7 @@
 ========================================= */
 
 .table-header {
-  background: linear-gradient(135deg, #6d00ff, #c700ff);
+  background: linear-gradient(135deg, #901299, #c700ff);
   padding: 20px 24px;
   display: flex;
   align-items: center;
@@ -374,11 +374,13 @@
   padding: 24px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   gap: 18px;
   flex-wrap: wrap;
   background: #ffffff;
-  border-radius: 0 0 24px 24px;
+  border-radius: 15px;
+  margin-top: 18px;
+
 }
 
 .pagination-btn {
