--- a/src/app/admin/pages/business-proof-types/business-proof-types.scss
+++ b/src/app/admin/pages/business-proof-types/business-proof-types.scss
@@ -52,7 +52,7 @@
   height: 52px;
   padding: 0 24px;
   border-radius: 16px;
-  background: linear-gradient(135deg, #6d00ff, #c700ff);
+  background: linear-gradient(135deg, #901299, #c700ff);
   color: #ffffff;
   font-size: 14px;
   font-weight: 700;
@@ -178,7 +178,7 @@
 ========================================= */
 
 .table-header {
-  background: linear-gradient(135deg, #6d00ff, #c700ff);
+  background: linear-gradient(135deg, #901299, #c700ff);
   padding: 20px 24px;
   display: flex;
   align-items: center;
@@ -330,11 +330,13 @@
   padding: 26px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end ;
   gap: 18px;
   flex-wrap: wrap;
   background: #ffffff;
   border-top: 1px solid #edf2f7;
+  border-radius: 15px;
+  margin-top: 18px;
 }
 
 .pagination-btn {
